--- a/packages/components/src/Disclosure/Disclosure.css
+++ b/packages/components/src/Disclosure/Disclosure.css
@@ -9,6 +9,7 @@
 }
 
 .summary {
+  padding: var(--space-smaller) 0 var(--space-smallest) 0;
   border: none;
   list-style: none;
   cursor: pointer;
