--- a/packages/docz-tools/src/gatsby-theme-docz/components/Layout/Layout.module.css
+++ b/packages/docz-tools/src/gatsby-theme-docz/components/Layout/Layout.module.css
@@ -82,7 +82,11 @@
   opacity: 1;
 }
 
-.skipNav a:visited,
-.skipNav a:focus {
+a.skipNav:hover {
+  background: var(--color-surface--hover);
+}
+
+a.skipNav:visited,
+a.skipNav:focus {
   color: var(--color-interactive);
 }
