fix width of skipnav for large screens

--- a/packages/docz-tools/src/gatsby-theme-docz/components/Layout/Layout.module.css
+++ b/packages/docz-tools/src/gatsby-theme-docz/components/Layout/Layout.module.css
@@ -73,6 +73,7 @@
   transition: all 0.2s ease;
 
   @media (--wide-screens) {
+    width: calc(100% - var(--table-of-contents-width) - var(--space-base));
     box-shadow: var(--shadow-focus);
   }
 }
