use same breakpoint as table of contents menu toggle

--- a/packages/docz-tools/src/gatsby-theme-docz/components/Layout/Layout.module.css
+++ b/packages/docz-tools/src/gatsby-theme-docz/components/Layout/Layout.module.css
@@ -72,7 +72,7 @@
   opacity: 0;
   transition: all 0.2s ease;
 
-  @media (--wide-screens) {
+  @media (min-width: 1300px) {
     width: calc(100% - var(--table-of-contents-width) - var(--space-base));
     box-shadow: var(--shadow-focus);
   }
