introduce web shadow variations, document and add to toast

--- a/packages/components/src/Toast/Toast.css
+++ b/packages/components/src/Toast/Toast.css
@@ -21,7 +21,7 @@
 }
 
 .toast {
-  box-shadow: var(--shadow-base);
+  box-shadow: var(--shadow-high);
   overflow: hidden;
   pointer-events: all;
 }
