--- a/packages/design/src/shadows.css
+++ b/packages/design/src/shadows.css
@@ -1,5 +1,8 @@
 :root {
-  --shadow-base: 0px 1px 4px 0px rgba(0, 0, 0, 0.0980392),
-    0px 4px 12px 0px rgba(0, 0, 0, 0.0470588);
+  --shadow-low: 0px 1px 4px rgba(0, 0, 0, 0.08);
+  --shadow-base: 0px 1px 4px 0px rgba(0, 0, 0, 0.1),
+    0px 4px 12px 0px rgba(0, 0, 0, 0.05);
+  --shadow-high: 0px 16px 16px 0px rgba(0, 0, 0, 0.16),
+    0px 0px 8px 0px rgba(0, 0, 0, 0.12);
   --shadow-focus: 0px 0px 4px 2px var(--color-focus);
 }
