add active surface and dimmed overlay

--- a/packages/components/src/List/ListItem.css
+++ b/packages/components/src/List/ListItem.css
@@ -48,7 +48,7 @@
 /* States */
 
 .isActive {
-  background-color: var(--color-green--lightest);
+  background-color: var(--color-surface--active);
 }
 
 /* TODO: Move truncate in typography */
