update color docs with v1 semantic swatches

--- a/packages/docx/src/ColorSwatches/ColorSwatch/ColorSwatch.css
+++ b/packages/docx/src/ColorSwatches/ColorSwatch/ColorSwatch.css
@@ -13,7 +13,8 @@
     tagging this swatch. */
 
 .color[style*="background-color: rgb(255, 255, 255);"],
-.color[style="background-color: var(--color-white);"] {
+.color[style*="background-color: var(--color-white);"],
+.color[style*="background-color: var(--color-white-rgb);"] {
   box-shadow: var(--shadow-base); /* 1 */
 }
 
