--- a/packages/design/src/colors.css
+++ b/packages/design/src/colors.css
@@ -52,7 +52,7 @@
   --color-border--section: var(--color-blue);
 
   --color-overlay: rgba(var(--color--greyBlue--rgb), 0.8);
-  --color-overlay--dimmed: rgba(var(--color--white--rgb), 0.4);
+  --color-overlay--dimmed: rgba(var(--color--white--rgb), 0.6);
 
   /* Brand */
   --color-brand: var(--color-green);
@@ -165,6 +165,6 @@
   --color-indigo--lightest: rgb(230, 233, 247);
   --color-indigo--dark: rgb(55, 69, 132);
 
-  --color--white--rgb: 255, 255, 255;
+  --color-white--rgb: 255, 255, 255;
   --color-white: rgba(var(--color--white--rgb));
 }
