--- a/packages/docz-tools/src/gatsby-theme-docz/components/Navigation/Navigation.module.css
+++ b/packages/docz-tools/src/gatsby-theme-docz/components/Navigation/Navigation.module.css
@@ -29,7 +29,7 @@
 
 .label:hover,
 .active {
-  color: var(--color-white);
+  color: var(--color-text--reverse);
 }
 
 /**
@@ -80,7 +80,7 @@
 
 .level2 .pageLabel.active,
 .level2 .pageLabel:hover {
-  color: var(--color-white);
+  color: var(--color-text--reverse);
 }
 
 .level2 .pageLabel.active::before {
