--- a/packages/design/src/colors.css
+++ b/packages/design/src/colors.css
@@ -40,13 +40,15 @@
   --color-heading: var(--color-blue);
   --color-text: var(--color-greyBlue--dark);
   --color-text--secondary: var(--color-greyBlue);
+  --color-text--reverse: var(--color-white);
+  --color-text--reverse--secondary: var(--color-greyBlue--lighter);
 
   /* Surfaces and Borders */
   --color-surface: var(--color-white);
   --color-surface--hover: var(--color-yellow--lightest);
   --color-surface--active: var(--color-green--lightest);
   --color-surface--background: var(--color-grey--lightest);
-  --color-surface--reverse: var(--color-greyBlue--dark);
+  --color-surface--reverse: var(--color-blue);
 
   --color-border: var(--color-grey--lighter);
   --color-border--section: var(--color-blue);
