--- a/packages/components/src/InlineLabel/InlineLabel.css
+++ b/packages/components/src/InlineLabel/InlineLabel.css
@@ -76,7 +76,7 @@
 }
 
 .blueDark {
-  color: var(--color-text--reverse);
+  color: var(--color-white);
   background-color: var(--color-blue--light);
 }
 
