--- a/packages/docz-tools/src/gatsby-theme-docz/components/Navigation/Navigation.module.css
+++ b/packages/docz-tools/src/gatsby-theme-docz/components/Navigation/Navigation.module.css
@@ -11,20 +11,21 @@
 .label {
   display: flex;
   width: 100%;
-  align-items: center;
-  justify-content: space-between;
   padding: 0;
   border: none;
   color: var(--color-greyBlue--lighter);
   font-family: "Poppins", sans-serif;
   font-size: var(--base-unit);
   font-weight: 700;
+  letter-spacing: 0.2px;
   text-decoration: none;
-  text-transform: uppercase;
+  text-transform: capitalize;
   background: none;
   cursor: pointer;
   transition: color var(--timing-base);
   appearance: none;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .label:hover,
