--- a/packages/components/src/Loader/Loader.css
+++ b/packages/components/src/Loader/Loader.css
@@ -15,7 +15,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: var(--color-overlay--dimmed);
   justify-content: center;
   align-items: center;
 }
