--- a/packages/design/src/colors.css
+++ b/packages/design/src/colors.css
@@ -51,8 +51,8 @@
   --color-border: var(--color-grey--lighter);
   --color-border--section: var(--color-blue);
 
-  --color-overlay: rgba(var(--color-greyBlue--rgb), 0.8);
-  --color-overlay--dimmed: rgba(var(--color-white--rgb), 0.6);
+  --color-overlay: rgba(101, 120, 132, 0.8);
+  --color-overlay--dimmed: rgba(255, 255, 255, 0.6);
 
   /* Brand */
   --color-brand: var(--color-green);
@@ -110,8 +110,10 @@
   --color-grey--lightest: rgb(244, 244, 244);
   --color-grey--dark: rgb(118, 118, 118);
 
-  --color-greyBlue--rgb: 101, 120, 132;
-  --color-greyBlue: rgb(var(--color-greyBlue--rgb));
+  /* TODO: Reintroduce RGB once the issue with JobberStyle is fixed */
+  /* --color-greyBlue--rgb: 101, 120, 132; */
+  /* --color-greyBlue: rgb(var(--color-greyBlue--rgb)); */
+  --color-greyBlue: rgb(101, 120, 132);
   --color-greyBlue--light: rgb(147, 161, 169);
   --color-greyBlue--lighter: rgb(193, 201, 206);
   --color-greyBlue--lightest: rgb(232, 235, 237);
@@ -165,6 +167,8 @@
   --color-indigo--lightest: rgb(230, 233, 247);
   --color-indigo--dark: rgb(55, 69, 132);
 
-  --color-white--rgb: 255, 255, 255;
-  --color-white: rgba(var(--color-white--rgb));
+  /* TODO: Reintroduce RGB once the issue with JobberStyle is fixed */
+  /* --color-white--rgb: 255, 255, 255; */
+  /* --color-white: rgba(var(--color-white--rgb)); */
+  --color-white: rgb(255, 255, 255);
 }
