--- a/packages/components/src/FormField/FormFieldStyles.css
+++ b/packages/components/src/FormField/FormFieldStyles.css
@@ -1,4 +1,5 @@
 :root {
+  --field--color: var(--color-blue);
   --field--height: var(--space-largest);
   --field--textAlign: left;
 
@@ -34,6 +35,7 @@
   border-bottom-right-radius: var(--public-field--bottom-right-radius);
   border-bottom-left-radius: var(--public-field--bottom-left-radius);
   border-top-left-radius: var(--public-field--top-left-radius);
+  color: var(--field--color);
   font-size: var(--base-unit);
   background-color: var(--field--background-color);
 }
@@ -122,6 +124,7 @@
   padding-right: var(--field--padding-right);
   border: none;
   border-radius: 0;
+  color: inherit;
   font-family: inherit;
   font-size: inherit;
   line-height: calc(var(--base-unit) * 1.25);
@@ -146,6 +149,15 @@
 .small .input {
   --field--padding-top: var(--space-small);
   --field--padding-bottom: var(--space-small);
+}
+
+.select:not(.small) .input {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.miniLabel.select:not(.small) .input {
+  padding-top: var(--space-small);
 }
 
 /**
@@ -186,11 +198,6 @@
 
 .large.miniLabel .label {
   top: var(--space-small);
-}
-
-.select:not(.small) .input {
-  padding-top: var(--space-small);
-  padding-bottom: 0;
 }
 
 /**
