--- a/packages/components/src/FormField/FormField.css
+++ b/packages/components/src/FormField/FormField.css
@@ -179,6 +179,7 @@
   width: 100%;
   padding-left: var(--field--padding-left);
   padding-right: var(--field--padding-right);
+  overflow: hidden;
   color: var(--field--placeholder-color);
   line-height: calc(var(--base-unit) * 1.25);
   text-align: var(--field--textAlign);
