--- a/packages/components/src/Button/Button.css
+++ b/packages/components/src/Button/Button.css
@@ -73,9 +73,10 @@ a.button:active {
 
 /* Cancel is special because, by default, it's styled as a secondary button */
 
-.cancel {
-  --button--color-variation: var(--color-cancel);
-  --button--color-variation--hover: var(--color-cancel--hover);
+.cancel,
+.subtle {
+  --button--color-variation: var(--color-interactive--subtle);
+  --button--color-variation--hover: var(--color-interactive--subtle--hover);
 }
 
 /* Type */
@@ -106,6 +107,15 @@ a.button:active {
 a.tertiary:hover,
 a.tertiary:focus {
   border-color: transparent;
+}
+
+.subtle:hover,
+.subtle:focus,
+a.subtle:hover,
+a.subtle:focus {
+  border-color: transparent;
+  color: var(--color-interactive--subtle--hover);
+  fill: var(--color-interactive--subtle--hover);
 }
 
 /* Disabled */
