--- a/packages/design/src/colors.css
+++ b/packages/design/src/colors.css
@@ -6,8 +6,8 @@
   --color-interactive--hover: var(--color-green--dark);
   --color-destructive: var(--color-red);
   --color-destructive--hover: var(--color-red--dark);
-  --color-cancel: var(--color-greyBlue);
-  --color-cancel--hover: var(--color-greyBlue--dark);
+  --color-interactive--subtle: var(--color-greyBlue);
+  --color-interactive--subtle--hover: var(--color-greyBlue--dark);
 
   --color-disabled: var(--color-grey);
   --color-disabled--secondary: var(--color-grey--lighter);
